# DiscordLLMTranslatorBot

./: .gitignore  AGENTS.md  README.md  config.sample.toml  install.sh  pyproject.toml  run.sh
src/discord_llm_translator/: __init__.py  __main__.py  bot.py  config.py  constants.py
src/discord_llm_translator/cogs/: __init__.py  translation.py
src/discord_llm_translator/models/: __init__.py  translation.py
src/discord_llm_translator/services/: __init__.py  language_detector.py  openrouter_client.py
src/discord_llm_translator/utils/: __init__.py  formatting.py
